--- a/src/componentes/Sidebar/Sidebar.css
+++ b/src/componentes/Sidebar/Sidebar.css
@@ -10,14 +10,14 @@
 .sidebar__navigation {
     background-color: #121212;
     border-radius: 8px;
-    padding: 16px 0 0 16px;
+    padding: 14px 0 0 16px;
 }
 
 .logo {
     background: #121212;
     display: flex;
     border-radius: 8px;
-    padding: 16px 0 0 16px;
+    padding: 16px 0 0 14px;
 }
 
 .sidebar__navigation .logo img {
@@ -26,7 +26,7 @@
 
 .sidebar nav ul {
     margin-top: 20px;
-    padding: 0 20px 10px 20px;
+    padding: 0 20px 10px 16px;
 }
 
 .sidebar ul li {
@@ -42,7 +42,7 @@
 }
 
 .sidebar nav ul li a span {
-    margin-right: 10px;
+    margin-right: 15px;
 }
 
 .library {
@@ -60,7 +60,8 @@
 
 .library .library__content {
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .library .library__button {
@@ -77,16 +78,16 @@
     padding: 20px 10px;
 }
 
-.library .library__button .fa {
+.library .library__button span {
     font-size: 20px;
     font-weight: 300;
     color: #b3b3b3;
-    margin-right: 10px;
+    margin-right: 8px;
     padding-right: 8px;
 }
 
-.library .library__content .fa-plus {
-    margin: 24px 10px;
+.library .library__content span {
+    
 }
 
 .section-playlist {
